# flask-os-primeiros-passos

./: .gitignore  00_preparando_o_ambiente_de_desenvolvimento.md  01_primeira_app.md  02_configurando_o_banco_de_dados.md  README.md
src/coffee-shop/: .ycm_extra_conf.py  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
src/coffee-shop/coffee_shop/: __init__.py  app.py  auth.py  commons.py  config.py  models.py  views.py
src/coffee-shop/coffee_shop/auth/: models.py  schemas.py  services.py  views.py
src/coffee-shop/coffee_shop/core/: exceptions.py  resources.py
src/coffee-shop/coffee_shop/product/: models.py  schemas.py  views.py
src/coffee-shop/coffee_shop/sale/: models.py  schemas.py  views.py
src/coffee-shop/migrations/versions/: 3b7fbe7189c1_.py  4dc0afdb6562_.py  610beadb8b9b_.py  94f1c3fac427_.py  ada00a6eaa3f_.py
src/coffee-shop/tests/: conftest.py  test_coffee_shop.py
src/coffee-shop/tests/auth/: test_schemas.py
